--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@ transactions.</p>
 <div class="col-lg-7">
 
 <div class="tokenomics-title-area text-center">
-<span class="tokenomics__sub">TOKENOMICS </span>
+<span class="tokenomics__sub">DUCK TOKEN </span>
 <h3 class="tokenomics__title">Contract Address</h3>
 <p class="tokenomics__adress"> 0x9f4735b025eb76f8f3b1987a764966ebbe4a46dd </p>
 </div>
