--- a/index.html
+++ b/index.html
@@ -893,7 +893,7 @@ transactions.</p>
 </footer>
 
 
-<a href="#" class="to-top"><span class="hidden text-bigger">To Top</span><i class="fas fa-angle-up fa-3x"></i></a>
+<a href="#" class="to-top"><span class="hidden text-bigger">To Top</span><i class="fa fa-angle-up fa-3x"></i></a>
 
 
 
