--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
 		}
     </style>
 <script async="" src="gtag/js.js?id=G-RYSRM7TGEN"></script>
-
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -929,15 +929,15 @@ transactions.</p>
 <h4 class="footer__title">Social Media</h4>
 <ul>
 
-<li><a href="https://twitter.com/Duck_Token?s=08" target="_blank" rel="noreferrer"><i class="fab fa-twitter"></i>Twitter</a></li>
+<li><a href="https://twitter.com/Duck_Token?s=08" target="_blank" rel="noreferrer"><i class="fa fa-twitter"></i>Twitter</a></li>
 
-<li><a href="https://t.me/DuckTokenIo" target="_blank" rel="noreferrer"><i class="fab fa-telegram-plane"></i>Telegram</a></li>
+<li><a href="https://t.me/DuckTokenIo" target="_blank" rel="noreferrer"><i class="fa fa-telegram-plane"></i>Telegram</a></li>
 
-<li><a href="" target="_blank" rel="noreferrer"><i class="fab fa-reddit"></i>Reddit</a></li>
+<li><a href="" target="_blank" rel="noreferrer"><i class="fa fa-reddit"></i>Reddit</a></li>
 
-<li><a href="" target="_blank" rel="noreferrer"><i class="fab fa-discord"></i>Discord</a></li>
+<li><a href="" target="_blank" rel="noreferrer"><i class="fa fa-discord"></i>Discord</a></li>
 
-<li><a href="" target="_blank" rel="noreferrer"><i class="fab fa-instagram"></i>Instagram</a></li>
+<li><a href="" target="_blank" rel="noreferrer"><i class="fa fa-instagram"></i>Instagram</a></li>
 </ul>
 </div>
 </div>
