--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
 		}
     </style>
 <script async="" src="gtag/js.js?id=G-RYSRM7TGEN"></script>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="//use.fontawesome.com/releases/v5.0.7/css/all.css">
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
@@ -552,7 +552,7 @@
 </li>
 <div>
 <li class="icon-bar">
-<a class="telegram" href="#stats"> <i class="fab fa-telegram"></i> Telegram</a>
+<a class="telegram" href="#stats"> <i class="fa fa-telegram"></i> Telegram</a>
 </li></div>
 
 </ul>
