--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
 
 <li><a href="https://t.me/DuckTokenIo" target="_blank" rel="noreferrer"><i class="fab fa-telegram"></i> Telegram</span></a></li>
 
-<li><a href="https://t.me/DuckTokenIo" target="_blank" rel="noreferrer"><i class="fab fa-discord"></i> Discord</span></a></li>
+<li><a href="https://discord.gg/ZSzNVwFF" target="_blank" rel="noreferrer"><i class="fab fa-discord"></i> Discord</span></a></li>
 
 </ul>
 </div>
