--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
 </li>
 <div>
 <li class="icon-bar">
-<a class="telegram" href="#stats"> <i class="fab fa-telegram"></i> Telegram</a>
+<a class="telegram" href="https://t.me/DuckTokenIo"> <i class="fab fa-telegram"></i> Telegram</a>
 </li></div>
 
 </ul>
