--- a/index.html
+++ b/index.html
@@ -570,10 +570,47 @@
 <div class="container">
 <div class="row justify-content-center">
 <div class="col-lg-8 col-md-8">
+
 <div class="banner-content text-center">
 
 <h1 class="title"> <span class="title__primary">  <br> <br> Duck Token </span></h1>
 
+<h3 class="title"> <span<br> Opening in 
+<p id="demo"></p>
+
+<script>
+// Set the date we're counting down to
+document.getElementById("demo").style.fontSize = "xx-large";
+
+var countDownDate = new Date("May 1, 2021 00:00:00 +1100").getTime();
+
+// Update the count down every 1 second
+var x = setInterval(function() {
+
+  // Get today's date and time
+  var now = new Date().getTime();
+
+  // Find the distance between now and the count down date
+  var distance = countDownDate - now;
+
+  // Time calculations for days, hours, minutes and seconds
+  var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+  var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+  var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+  var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+  // Display the result in the element with id="demo"
+  document.getElementById("demo").innerHTML = days + "d " + hours + "h "
+  + minutes + "m " + seconds + "s ";
+
+  // If the count down is finished, write some text
+  if (distance < 0) {
+    clearInterval(x);
+    document.getElementById("demo").innerHTML = "EXPIRED";
+  }
+}, 1000);
+</script>
+</span></h1>
 <ul>
 
 
@@ -583,8 +620,6 @@
 </div>
 </div>
 </div>
-
-<script>(function(d, s, id) { var js, pjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = "//www.tickcounter.com/static/js/loader.js"; pjs.parentNode.insertBefore(js, pjs); }(document, "script", "tickcounter-sdk"));</script>
 
 <div class="social">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
