--- a/index.html
+++ b/index.html
@@ -1,13 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+ <title>Duck Token | Flying to the Moon this 2021</title>
+		<meta charset="utf-8">
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="language" content="en">
+		<link rel="dns-prefetch preconnect" href="https://u.jimcdn.com/" crossorigin="anonymous">
+		<link rel="dns-prefetch preconnect" href="https://assets.jimstatic.com/" crossorigin="anonymous">
+		<link rel="dns-prefetch preconnect" href="https://image.jimcdn.com" crossorigin="anonymous">
+		<link rel="dns-prefetch preconnect" href="https://fonts.jimstatic.com" crossorigin="anonymous">
+		<link rel="dns-prefetch preconnect" href="https://www.google-analytics.com" crossorigin="anonymous">
+		<!-- Primary Meta Tags -->
+		<meta name="description" content="Duck Token | Flying to the Moon this 2021">
+		<meta name="robots" content="index, follow, archive">
+		<meta name="googlebot" content="index, follow, archive" /> 
+		<meta name="coverage" content="Worldwide">
+		<meta name="distribution" content="Global">
+		<meta name="rating" content="General">
+		<meta name="target" content="all">
+		<meta property="st:section" content="Duck Token | Flying to the Moon this 2021">
+		<meta name="twitter:title" content="Duck Token | Flying to the Moon this 2021">
+		<meta name="twitter:description" content="Duck Token | Flying to the Moon this 2021">
+		<meta name="twitter:card" content="summary_large_image">
+		<meta property="og:url" content="http://ducktoken.io">
+		<meta property="og:title" content="Duck Token | Flying to the Moon this 2021">
+		<meta property="og:description" content="Duck Token | Flying to the Moon this 2021">
+		<meta property="og:type" content="website">
+		<meta property="og:locale" content="en_EN">
+		<meta property="og:site_name" content="Duck Token | Flying to the Moon this 2021">
+		<meta name="keywords" content="Duck Token, crypto, duck, token, cryptocurrency, cryptoworld"/>
+		<meta name="author" content="Duck Token" />
+        <meta name="copyright" content="Duck Token" />
+		<meta content="text/html; charset=UTF-8" http-equiv="content-type">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<!-- OPEN GRAPH -->
+	    <meta property="og:type" content="website">
+		<meta property="og:locale" content="en_GB">
+		<meta property="og:locale:alternate" content="it_IT">
+		<meta property="og:locale:alternate" content="ro_RO">
+		<meta property="og:locale:alternate" content="es_ES">
+		<meta property="og:locale:alternate" content="br_BR">
+		<meta property="og:locale:alternate" content="ar_AR">
+		<meta property="og:locale:alternate" content="ru_RU">
+		
+		<!-- Article -->
+		<meta property="article:published_time" content="">
+		<meta property="article:expiration_time" content="">
+		<meta property="article:modified_time" content="">
+		<meta property="article:author" content="">
+		<meta property="article:section" content="">
+		<meta property="article:tag" content="Duck Token, crypto, duck, token, cryptocurrency, cryptoworld"/>
+	    <!-- Facebook -->
+		<meta property="og:url" content="https://cstrike.es/">
+		<meta property="og:title" content="Duck Token | Flying to the Moon this 2021">
+		<meta property="og:site_name" content="Duck Token | Flying to the Moon this 2021">
+		<meta property="og:description" content="Duck Token | Flying to the Moon this 2021">
+		<meta property="og:image" content="https://ducktoken.io/assets/img/illustrations/duck.png">
+		<!-- Twitter -->
+		<meta property="twitter:card" content="summary_large_image">
+		<meta property="twitter:url" content="https://ducktoken.io">
+		<meta property="twitter:title" content="Duck Token | Flying to the Moon this 2021">
+		<meta property="twitter:description" content="Duck Token | Flying to the Moon this 2021">
+		<meta property="twitter:image" content="https://ducktoken.io/assets/img/illustrations/duck.png">
+		<meta name="description" content="Cryptocurrency Duck Token">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+		<!-- END -->
+<
 
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="description" content="Cryptocurrency Duck Token">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 
-<title>Duck Token | Flying to the Moon this 2021</title>
+
 
 <link rel=" shortcut icon" href="assets/img/favicon/duck-logo_1.webp" type="image/png">
 <style>
