--- a/index.html
+++ b/index.html
@@ -977,7 +977,7 @@ transactions.</p>
 
 <li><a href="https://twitter.com/Duck_Token?s=08" target="_blank" rel="noreferrer"><i class="fab fa-twitter"></i>Twitter</a></li>
 
-<li><a href="http://t.me/DuckTokenChat" target="_blank" rel="noreferrer"><i class="fab fa-telegram-plane"></i>Telegram</a></li>
+<li><a href="https://t.me/DuckTokenChat" target="_blank" rel="noreferrer"><i class="fab fa-telegram-plane"></i>Telegram</a></li>
 
 <li><a href="" target="_blank" rel="noreferrer"><i class="fab fa-reddit"></i>Reddit</a></li>
 
