--- a/index.html
+++ b/index.html
@@ -612,6 +612,18 @@
 <div>
 </div>
 
+<div class="social">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<ul>
+
+<li><a href="https://twitter.com/Duck_Token" target="_blank" rel="noreferrer"><i class="fab fa-twitter"></i> Twitter</span></a></li>
+
+<li><a href="https://t.me/DuckTokenChat" target="_blank" rel="noreferrer"><i class="fab fa-telegram"></i> Telegram</span></a></li>
+
+
+</ul>
+</div>	
+	
 </ul>
 </div> 
 </nav>
