--- a/index.html
+++ b/index.html
@@ -220,7 +220,8 @@
 
         .banner-area {
             height: 102rem;
-            position: relative
+            position: relative;
+	    margin-top:82px;
         }
 
         .banner-content {
