--- a/index.html
+++ b/index.html
@@ -322,9 +322,9 @@
             right: 0;
             left: 0;
             z-index: 99;
-            background-color: transparent;
+            background-color: linear-gradient(120deg, #ab08ff 0%, #0013f7 100%);
             padding: 0 1.5rem;
-            border-bottom: 1px solid #041320
+            border-bottom: 1px solid #041320;
         }
 
         @media only screen and (min-width:768px) and (max-width:991px) {
