--- a/index.html
+++ b/index.html
@@ -610,6 +610,11 @@
 <li class="nav-item">
 <a class="nav-link" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x9f4735b025eb76f8f3b1987a764966ebbe4a46dd&inputCurrency=0xe9e7cea3dedca5984780bafc599bd69add087d56" target="_blank">Buy Duck</a>
 </li>
+	
+<li class="nav-item">
+<a class="nav-link btn btn-primary" href="https://t.me/cateclub" target="_blank"><img class="mr-2" src="img/telegram.svg">Join Telegram</a>
+</li>
+	
 <div>
 </div>
 
