--- a/index.html
+++ b/index.html
@@ -113,7 +113,11 @@
         [type='button'] {
             -webkit-appearance: button
         }
-
+	.btn-primary {
+ 	    background-color: #1A9BFC;
+            color: #FFFFFF !important;
+	    border: none;
+	}
         button::-moz-focus-inner,
         [type='button']::-moz-focus-inner {
             border-style: none;
