--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
 </li>
 	
 <li class="nav-item">
-<a class="nav-link btn btn-primary" href="https://t.me/DuckTokenChat" target="_blank" style="line-height: 4rem!important;padding: 0 16px;color: #fff!important;"><img class="mr-2" src="assets/img/illustrations/telegram.svg">Join Telegram</a>
+<a class="nav-link btn btn-primary" href="https://t.me/DuckTokenChat" target="_blank" style="line-height: 4rem!important;padding: 0 16px;color: #fff!important;margin-top: 10px;"><img class="mr-2" src="assets/img/illustrations/telegram.svg">Join Telegram</a>
 </li>
 	
 <div>
