--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
             right: 0;
             left: 0;
             z-index: 99;
-            background-color: linear-gradient(120deg, #ab08ff 0%, #0013f7 100%);
+            background:linear-gradient(120deg, #ab08ff 0%, #0013f7 100%);
             padding: 0 1.5rem;
             border-bottom: 1px solid #041320;
         }
