--- a/index.html
+++ b/index.html
@@ -616,11 +616,11 @@
 </li>
 	
 <li class="nav-item">
-<a class="nav-link btn btn-primary" href="https://t.me/DuckTokenChat" target="_blank" style="line-height: 4rem!important;padding: 0 16px;color: #fff!important;margin-top: 10px;"><img class="mr-2" src="assets/img/illustrations/telegram.svg">Telegram</a>
+<a class="nav-link btn btn-primary" href="https://t.me/DuckTokenChat" target="_blank" style="line-height: 4rem!important;padding: 0 16px;color: #fff!important;margin-top: 10px;"><i class="fab fa-telegram"></i> Telegram</a>
 </li>
 	
 <li class="nav-item">
-<a class="nav-link btn btn-primary" href="https://twitter.com/Duck_Token" target="_blank" style="line-height: 4rem!important;padding: 0 16px;color: #fff!important;margin-top: 10px;"><img class="mr-2" src="assets/img/illustrations/telegram.svg">Twitter</a>
+<a class="nav-link btn btn-primary" href="https://twitter.com/Duck_Token" target="_blank" style="line-height: 4rem!important;padding: 0 16px;color: #fff!important;margin-top: 10px;"><i class="fab fa-twitter"></i> Twitter</a>
 </li>
 	
 <div>
