--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
 
 
 <li class="nav-item">
-<a class="nav-link" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x9f4735b025eb76f8f3b1987a764966ebbe4a46dd&inputCurrency=0xe9e7cea3dedca5984780bafc599bd69add087d56" target="_blank">Buy Duck</a>
+<a class="nav-link" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x9f4735b025eb76f8f3b1987a764966ebbe4a46dd" target="_blank">Buy Duck</a>
 </li>
 	
 <li class="nav-item">
@@ -653,7 +653,7 @@
 <ul>
 
 
-<li><a class="main-btn main-btn-2" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x9f4735b025eb76f8f3b1987a764966ebbe4a46dd&inputCurrency=0xe9e7cea3dedca5984780bafc599bd69add087d56" rel="noreferrer" target="_blank">Buy Duck</a></li>
+<li><a class="main-btn main-btn-2" href="https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x9f4735b025eb76f8f3b1987a764966ebbe4a46dd" rel="noreferrer" target="_blank">Buy Duck</a></li>
 </ul>
 </div>
 </div>
