--- a/trade.html
+++ b/trade.html
@@ -1,1 +1,1 @@
-<meta http-equiv = "refresh" content = "0; url = https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x9f4735b025eb76f8f3b1987a764966ebbe4a46dd&inputCurrency=0xe9e7cea3dedca5984780bafc599bd69add087d56" />
+<meta http-equiv = "refresh" content = "0; url = https://exchange.pancakeswap.finance/#/swap?outputCurrency=0x9f4735b025eb76f8f3b1987a764966ebbe4a46dd" />
