--- a/index.html
+++ b/index.html
@@ -822,7 +822,7 @@ transactions.</p>
 
 <div class="stat__content">
 <h4 class="stat__title">NON PROFIT ORGANIZATION</h4>
-<p class="stat__text">We locked 25% of the total supply to Pancakeswap.finance and will stay there forever! The remaining 75% will burned in key moments in order to impulse prices, or used for liquidity pools and rewards (and incentivize a constant demand), or used for marketing and development expenses, and a 7% given to FREE PORT ASSOCIATION, an European non profit organization aimed to promote culture and Art around the World, in order to develop our own blockchain and make the project much more bigger. We do not claim to be a Bitcoin killer, or an Ethereum killer, but this project is starting now, and it won't stop for at least 50 years onwards. Only 3% is going to the development team.  
+<p class="stat__text">We locked 25% of the total supply to Pancakeswap.finance and will stay there forever! The remaining 75% will burned in key moments in order to impulse prices, or used for liquidity pools and rewards (and incentivize a constant demand), or used for marketing and development expenses, and a 7% given to FREE DUCK ASSOCIATION, an European non profit organization aimed to promote culture and Art around the World, in order to develop our own blockchain and make the project much more bigger. We do not claim to be a Bitcoin killer, or an Ethereum killer, but this project is starting now, and it won't stop for at least 50 years onwards. Only 3% is going to the development team.  
 </p>
 </div>
 </div>
